fix: adjust alignemnt on large screens

--- a/src/Features/Support/Support.module.scss
+++ b/src/Features/Support/Support.module.scss
@@ -2,7 +2,6 @@
 
 .contentContainer {
   display: flex;
-  justify-content: center;
   padding: 4rem;
 }
 
